<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_gravity="center" android:orientation="vertical"  >


    <TextView
        android:id="@+id/filterDesEtx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/filterDescript"
        android:textColor="@android:color/black"
        android:textSize="25dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:textSize="25dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/sortTime" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:textSize="25dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/sortType" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:textSize="25dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/sortRegion" />

    <Button
        android:id="@+id/btFilter"
        android:background="@drawable/rounded_button_fourcorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="#ffffff"
        android:text="@string/change" />
</LinearLayout>
