<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="220dp"
    android:weightSum="3">

    <android.support.v7.widget.CardView
        android:id="@+id/cvRoot"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginLeft="40dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/line1"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:weightSum="1">

            <TextView
                android:id="@+id/challengeType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/basic"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/challengeDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/challengDes" />

            <TextView
                android:id="@+id/enterBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/enter"
                android:textAlignment="viewEnd"
                android:paddingTop="20dp"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>