<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="com.codepath.powerrun.LoginActivity">

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="116dp"
        android:layout_marginTop="134dp"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/inputField"
        android:layout_alignEnd="@+id/inputField"
        android:onClick="signUp"/>

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:paddingBottom="5dp"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="116dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_alignBaseline="@+id/signUp"
        android:layout_alignBottom="@+id/signUp"
        android:layout_alignLeft="@+id/inputField"
        android:layout_alignStart="@+id/inputField" />

    <Button
        android:id="@+id/signGoogle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/pic_sign_google"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="569dp" />

    <Button
        android:id="@+id/signFb"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signGoogle"
        android:layout_alignLeft="@+id/signGoogle"
        android:layout_alignStart="@+id/signGoogle"
        android:layout_marginBottom="11dp"
        android:background="@drawable/pic_sign_fb"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="569dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="225dp"
        android:orientation="vertical"
        android:shadowRadius="2"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="185dp"
        android:id="@+id/inputField"
        android:layout_below="@+id/signUp"
        android:layout_alignLeft="@+id/signFb"
        android:layout_alignStart="@+id/signFb"
        android:layout_marginTop="41dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="300dp"
            android:background="@drawable/rounded_edittext"
            android:padding="10dp"
            android:layout_height="80dp">

            <EditText
                android:id="@+id/etxEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:background="@android:color/background_light">

            <EditText
                android:id="@+id/etxPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/login_selector"
            android:shadowColor="@android:color/darker_gray"
            android:shadowRadius="40"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgetPass"
        android:text="@string/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15dp"
        android:textColor="@android:color/white"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/inputField"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
