<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.powerrun.EventDetailActivity">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/include"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/sanmao" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="8dp"
                android:textSize="16dp"
                android:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/clubNameImg"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_group" />

                <TextView
                    android:id="@+id/clubName"
                    android:layout_weight="1"
                    android:textSize="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daan Running Club" />

                <ImageView
                    android:id="@+id/eventTypeImg"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_run_type" />

                <TextView
                    android:id="@+id/eventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_weight="1"
                    android:text="Interval Training" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/eventDateImg"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12dp"
                    android:text="2017-07-29" />

                <ImageView
                    android:id="@+id/eventTimeImg"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/eventTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12dp"
                    android:text="23:00" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/evenLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginLeft="8dp"
        android:textSize="15dp"
        android:text="@string/location"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <ImageView
        android:id="@+id/locationMap"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/group_map"
        android:layout_below="@+id/evenLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/eventDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginLeft="8dp"
        android:textSize="15dp"
        android:text="@string/detail"
        android:layout_below="@+id/locationMap"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rounded_button_blue"
        android:text="@string/join"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp" />

</RelativeLayout>
